--- a/webroot/views/products/index.html
+++ b/webroot/views/products/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8"/>
   </head>
   <body>
-    <script src="../../dist/js/modules/views/products/index.js" charset="utf-8"></script>
+    <script src="/jspm_packages/system.js" charset="utf-8"></script>
+    <script src="/config.js" charset="utf-8"></script>
+    <script>
+      System.import('products/index');
+    </script>
   </body>
 </html>
