--- a/webroot/views/products/index.html
+++ b/webroot/views/products/index.html
@@ -7,7 +7,7 @@
     <script src="/jspm_packages/system.js" charset="utf-8"></script>
     <script src="/config.js" charset="utf-8"></script>
     <script>
-      System.import('products/index');
+      System.import('products/indexES6');
     </script>
   </body>
 </html>
